[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Tank.gd" type="Script" id=1]
[ext_resource path="res://sprites/tankBody_bigRed.png" type="Texture" id=2]
[ext_resource path="res://sprites/tankDark_barrel1_outline.png" type="Texture" id=3]
[ext_resource path="res://sprites/shotRed.png" type="Texture" id=4]
[ext_resource path="res://sprites/shotLarge.png" type="Texture" id=5]
[ext_resource path="res://sprites/shotOrange.png" type="Texture" id=6]
[ext_resource path="res://scripts/Sight.tres.gd" type="Script" id=7]
[ext_resource path="res://sprites/specialBarrel4_outline.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "fire"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("fire:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fire:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 36, 0 ), Vector2( 38, 0 ), Vector2( 41, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("fire:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "shootImpact"
length = 0.4

[sub_resource type="Animation" id=3]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.420449, 1 ),
"update": 0,
"values": [ Vector2( -19.0885, 0 ), Vector2( 0, 0 ) ]
}

[node name="Tank" type="KinematicBody2D"]
z_index = 20
collision_mask = 6
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -12.8442, -17.9845, -17.0207, -12.4159, -17.0207, 12.4442, -11.8498, 17.9134, 11.817, 17.9134, 16.9879, 14.8308, 16.9879, -14.0069, 12.6125, -18.084 )

[node name="sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 2 )

[node name="barrel" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="barrel"]
rotation = 1.5708
texture = ExtResource( 3 )
offset = Vector2( 0, -8.388 )

[node name="muzzle" type="Position2D" parent="barrel"]
position = Vector2( 32.8845, -0.135632 )

[node name="fire" type="Sprite" parent="barrel"]
visible = false
position = Vector2( 41, 0 )
rotation = 4.71239
z_index = 1
texture = ExtResource( 4 )

[node name="anim" type="AnimationPlayer" parent="barrel"]
playback_speed = 2.0
anims/fire = SubResource( 1 )
anims/shootImpact = SubResource( 2 )

[node name="sight" type="Node2D" parent="barrel"]
position = Vector2( 128.204, 0 )
script = ExtResource( 7 )

[node name="anim_barrel" type="AnimationPlayer" parent="barrel"]
anims/shoot = SubResource( 3 )

[node name="loadTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="machineGun" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="sprite" type="Sprite" parent="machineGun"]
position = Vector2( 19.7356, 14.2355 )
rotation = -1.5708
z_index = 21
texture = ExtResource( 8 )

[node name="mg_muzzle" type="Position2D" parent="machineGun"]
position = Vector2( 47.2359, 16.1767 )

[node name="shoot_interval" type="Timer" parent="machineGun"]
wait_time = 0.1
one_shot = true
[connection signal="timeout" from="loadTimer" to="." method="_on_loadTimer_timeout"]
[connection signal="timeout" from="machineGun/shoot_interval" to="." method="_on_shoot_interval_timeout"]
